@@ -2,6 +2,9 @@ ver 0.0.22: add several functions to the tree class
 
 tree.climbing_stairs()
 tree.coin_change()
+tree.decode_ways()
+tree.disjoint_set()
+tree.tree_traversal()
 
 
 2022-01-02
